Suite de l'interface administrative

--- a/res04-J3/exercice-DOM/style.css
+++ b/res04-J3/exercice-DOM/style.css
@@ -67,3 +67,24 @@ body h1 {
 #green {
     background-color: green;
 }
+
+#ball {
+    width:5rem;
+    height:5rem;
+    border-radius:50%;
+    margin-bottom:1rem;
+    background:linear-gradient(0deg, rgba(0, 255, 235, 1) 5%, rgba(7, 58, 187, 1) 100%);
+}
+
+.roll {
+    animation:roll 2s;
+    animation-fill-mode:forwards;
+}
+@keyframes roll {
+    from {
+        transform:translateX(0) rotate(0);
+    }
+    to {
+        transform:translateX(10rem) rotate(180deg);
+    }
+}
