--- a/res04-J3/interface-admin/style.css
+++ b/res04-J3/interface-admin/style.css
@@ -1,6 +1,5 @@
 body {
     font-family:"Montserrat", sans-serif;
-    text-transform: uppercase;
     margin:0;
     padding:0;
     box-sizing:border-box;
@@ -8,16 +7,14 @@ body {
 header {
     display:grid;
     grid-template-columns:0.25fr 0.75fr;
-    
+    text-transform: uppercase;
 }
 header section:first-of-type {
     grid-column:1/2;
-    margin:0 auto;
-    width:100%;
-    height:14vh;
-    display:flex;
-    justify-content:space-around;
-    align-items:center;
+    padding:0.5rem;
+    display:grid;
+    grid-template-columns: 0.2fr 0.2fr 0.6fr;
+    border-right:1px solid black;
 }
 header section:last-of-type {
     grid-column:2/3;
@@ -26,6 +23,10 @@ header section:last-of-type {
 header span {
     grid-column:1/2;
     font-size:3em;
+    cursor:pointer;
+}
+header img {
+    grid-column:3/4;
 }
 
 
@@ -34,12 +35,11 @@ main {
     display:grid;
     grid-template-columns:0.25fr 0.75fr;
 }
-
-
 aside {
     grid-column:1/2;
     border-right:1px solid black;
     padding:.5rem 1rem;
+    text-transform: uppercase;
 }
 aside nav h2 {
     font-size:22px;
@@ -52,9 +52,11 @@ aside nav ul {
 }
 .open {
     display:block;
+    border-bottom:none;
 }
 .close {
     display:none;
+    border-bottom:1px solid black;
 }
 a {
     text-decoration:none;
@@ -64,10 +66,94 @@ a {
 a:hover {
     text-decoration:underline;
 }
-
-
-main section {
+main > section {
     grid-column:2/3;
     height:30rem;
-    
+    padding:1.8rem;
+}
+main section h2 {
+    text-transform:uppercase;
+    color:#0077B6;
+    margin:0;
+    margin-bottom:3rem;
+}
+main > section > section:first-of-type button {
+    border:none;
+    cursor:pointer;
+    color:white;
+    background-color:#023E8A;
+    font-family:"Montserrat", sans-serif;
+    font-size:1rem;
+    padding:0.7rem 1.2rem;
+    box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.2);
+    border-radius: 0.2rem;
+}
+main > section table {
+    width:100%;
+    margin-top:4rem;
+    border-collapse:collapse;
+    border-spacing:0;
+}
+table > thead {
+    text-align:left;
+    line-height:4rem;
+    font-size:1.3rem;
+}
+table > tbody tr {
+    font-size:1.2rem;
+    line-height:2.5rem;
+}
+table > tbody tr:not(:last-of-type) {
+    border-bottom:1px solid rgba(0, 0, 0, 0.2);
+}
+main section section:nth-of-type(2) table span {
+    font-size:1.5rem;
+}
+main section section:nth-of-type(2) table button {
+    border:none;
+    background-color:transparent;
+    cursor:pointer;
+    color:#b50604;
+    font-size:1.5rem;
+}
+main section section:nth-of-type(2) table a {
+    font-size:1.5rem;
+    color:#023E8A;
+}
+
+
+
+
+#modal-delete {
+    width:100%;
+    background-color:rgba(0, 0, 0, 0.3);
+    display:flex;
+    align-items:center;
+    justify-content:center;
+}
+#modal-confirm {
+    background-color:#fff;
+    width:38%;
+    padding:2rem;
+    border-radius:5px;
+    border:1px solid #b50604;
+}
+#modal-confirm p {
+    text-align: center;
+    font-size:1.2rem;
+}
+#btn {
+    display:flex;
+    justify-content:center;
+}
+#btn button {
+    margin:0 1rem;
+}
+#btn #cancel {
+    border:1px solid black;
+    color:black;
+    background-color:transparent;
+}
+#btn button:last-of-type {
+    background-color:#b50604;
 }
