--- a/res04-J4/projet-paint/assets/style/css/style.css
+++ b/res04-J4/projet-paint/assets/style/css/style.css
@@ -62,20 +62,30 @@ body header {
 }
 body header menu {
   display: flex;
+  align-items: center;
 }
 body header menu h2 {
   font-size: 1.5rem;
   padding: 0.5rem 2rem;
 }
 body header menu button {
-  padding: 0 2rem;
+  width: 4rem;
+  height: 2rem;
 }
 body main#scene {
   width: 100vw;
   display: grid;
   grid-template-rows: repeat(10, 1fr);
+}
+body main > div {
+  display: grid;
   grid-template-columns: repeat(10, 1fr);
-  border: 1px dotted rgba(0, 0, 0, 0.2);
+}
+body .dotted-border {
+  border: 1px dotted rgba(0, 0, 0, 0.3);
+}
+body .selected {
+  border: 1px solid black;
 }
 
 /*# sourceMappingURL=style.css.map */
