--- a/res04-J4/projet-paint/assets/style/sass/style.scss
+++ b/res04-J4/projet-paint/assets/style/sass/style.scss
@@ -7,24 +7,43 @@ body {
     
     header {
         height:8vh;
+        
         menu {
             display:flex;
+            align-items:center;
+            
             h2 {
                 font-size:1.5rem;
                 padding:.5rem 2rem;
             }
+            
             button {
-                padding:0 2rem;
+                width:4rem;
+                height:2rem;
             }
         }
     }
     main {
+        
         &#scene {
             width:100vw;
             display:grid;
             grid-template-rows:repeat(10, 1fr);
-            grid-template-columns:repeat(10, 1fr);
-            border:1px dotted rgba(0,0,0,.2);
         }
+        
+        &>div {
+            display:grid;
+            grid-template-columns:repeat(10, 1fr);
+            
+            &>div {
+                // border:1px dotted rgba(0,0,0,.3);
+            }
+        }
+    }
+    .dotted-border {
+        border:1px dotted rgba(0,0,0,.3);
+    }
+    .selected {
+        border:1px solid black;
     }
 }
