--- a/res04-J4/projet-paint/assets/style/sass/style.scss
+++ b/res04-J4/projet-paint/assets/style/sass/style.scss
@@ -12,12 +12,12 @@ body {
             display:flex;
             align-items:center;
             
-            h2 {
+            label {
                 font-size:1.5rem;
                 padding:.5rem 2rem;
             }
             
-            button {
+            input {
                 width:4rem;
                 height:2rem;
             }
